# ouroboros-network

./: cabal.project
docs/: interface-CHANGELOG.md
ouroboros-consensus/: ouroboros-consensus.cabal
ouroboros-consensus-cardano/: ouroboros-consensus-cardano.cabal
ouroboros-consensus-cardano-tools/: ouroboros-consensus-cardano-tools.cabal
ouroboros-consensus-cardano-tools/app/: db-analyser.hs  db-synthesizer.hs
ouroboros-consensus-cardano-tools/app/DBSynthesizer/: Parsers.hs
ouroboros-consensus-cardano-tools/db-synthesizer/: ouroboros-consensus-cardano-db-synthesizer.cabal
ouroboros-consensus-cardano-tools/db-synthesizer/src/: Configuration.hs  Forging.hs
ouroboros-consensus-cardano-tools/src/Cardano/Tools/DBAnalyser/: Analysis.hs  HasAnalysis.hs
ouroboros-consensus-cardano-tools/src/Cardano/Tools/DBAnalyser/Block/: Alonzo.hs  Byron.hs  Cardano.hs  Shelley.hs
ouroboros-consensus-cardano-tools/src/Cardano/Tools/DBSynthesizer/: Forging.hs  Orphans.hs  Types.hs
ouroboros-consensus-cardano/tools/db-analyser/Block/: Cardano.hs
ouroboros-consensus-cardano/tools/db-synthesizer/: Forging.hs  Main.hs
ouroboros-consensus-cardano/tools/db-synthesizer/Configuration/: Parsers.hs
ouroboros-consensus-test/src/Test/ThreadNet/: Network.hs
ouroboros-consensus-test/test-consensus/Test/Consensus/MiniProtocol/ChainSync/: Client.hs
ouroboros-consensus/src/Ouroboros/Consensus/: Node.hs
ouroboros-consensus/src/Ouroboros/Consensus/Network/: NodeToNode.hs
ouroboros-consensus/src/Ouroboros/Consensus/Node/: ExitPolicy.hs
ouroboros-consensus/utxo-hd-experiment/: Main.hs
ouroboros-network/: ouroboros-network.cabal
ouroboros-network-api/src/Ouroboros/Network/NodeToClient/: Version.hs
ouroboros-network/protocol-tests/Ouroboros/Network/Protocol/LocalStateQuery/: Test.hs
ouroboros-network/src/Ouroboros/Network/: ExitPolicy.hs  NodeToClient.hs
ouroboros-network/src/Ouroboros/Network/Diffusion/: Common.hs  P2P.hs  Policies.hs
ouroboros-network/src/Ouroboros/Network/PeerSelection/: Governor.hs  KnownPeers.hs  PeerStateActions.hs
ouroboros-network/src/Ouroboros/Network/PeerSelection/Governor/: ActivePeers.hs  Monitor.hs  Types.hs
ouroboros-network/src/Ouroboros/Network/Protocol/ChainSync/: ClientPipelined.hs  Codec.hs
ouroboros-network/src/Ouroboros/Network/Protocol/LocalStateQuery/: Codec.hs
ouroboros-network/test-cddl/: Main.hs
ouroboros-network/test/Test/Ouroboros/Network/: PeerSelection.hs  Testnet.hs
ouroboros-network/test/Test/Ouroboros/Network/Diffusion/Node/: MiniProtocols.hs
ouroboros-network/test/Test/Ouroboros/Network/PeerSelection/: MockEnvironment.hs
