name:                  ouroboros-consensus-cardano-db-synthesizer
version:               0.1.0.0
synopsis:              Programmatically synthesize blocks and a ChainDB, without transactions
-- description:
license:               Apache-2.0
license-files:
  NOTICE
copyright:             2022 Input Output (Hong Kong) Ltd.
author:                IOHK 
maintainer:            operations@iohk.io
category:              Network
build-type:            Simple
cabal-version:         >=1.10

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ouroboros-network

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

library
  hs-source-dirs:      src

  exposed-modules:     Configuration
                     , Configuration.Parsers
                     , Forging

                     , Cardano.Api.Any
                     , Cardano.Api.Protocol.Types
                     , Cardano.Node.Protocol.Types
                     , Cardano.Node.Types
                     , Cardano.Node.Protocol

  build-depends:       base
                     , aeson
                     , base16-bytestring >= 1.0
                     , bytestring
                     , cborg
                     , contra-tracer
                     , deepseq
                     , directory
                     , filepath
                     , mtl
                     , nothunks
                     , optparse-applicative
                     , text
                     , transformers
                     , transformers-except

                     , cardano-binary
                     , cardano-crypto
                     , cardano-crypto-wrapper
                     , cardano-crypto-class
                     , cardano-ledger-alonzo
                     , cardano-ledger-babbage
                     , cardano-ledger-byron
                     , cardano-ledger-core
                     , cardano-ledger-shelley
                     , cardano-protocol-tpraos
                     , cardano-prelude
                     , cardano-slotting

                     , ouroboros-consensus
                     , ouroboros-consensus-byron
                     , ouroboros-consensus-cardano
                     , ouroboros-consensus-protocol
                     , ouroboros-consensus-shelley
                     , ouroboros-network

  other-modules:       Cardano.Api.Key
                     , Cardano.Api.KeysByron
                     , Cardano.Api.KeysPraos
                     , Cardano.Api.KeysShelley
                     , Cardano.Api.OperationalCertificate
                     , Cardano.Api.SerialiseUsing
                     , Cardano.Api.SerialiseTextEnvelope
                     , Cardano.Node.Protocol.Alonzo
                     , Cardano.Node.Protocol.Byron
                     , Cardano.Node.Protocol.Cardano
                     , Cardano.Node.Protocol.Shelley

  default-language:    Haskell2010

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
  if flag(asserts)
    ghc-options:       -fno-ignore-asserts

executable db-synthesizer
  hs-source-dirs:      app
  main-is:             db-synthesizer.hs

  default-language:    Haskell2010

  build-depends:       base
                     , ouroboros-consensus-cardano-db-synthesizer
                     , aeson
                     , base16-bytestring >= 1.0
                     , bytestring
                     , cborg
                     , contra-tracer
                     , deepseq
                     , directory
                     , filepath
                     , mtl
                     , nothunks
                     , optparse-applicative
                     , text
                     , transformers
                     , transformers-except

                     , cardano-binary
                     , cardano-crypto
                     , cardano-crypto-wrapper
                     , cardano-crypto-class
                     , cardano-ledger-alonzo
                     , cardano-ledger-babbage
                     , cardano-ledger-byron
                     , cardano-ledger-core
                     , cardano-ledger-shelley
                     , cardano-protocol-tpraos
                     , cardano-prelude
                     , cardano-slotting

                     , ouroboros-consensus
                     , ouroboros-consensus-byron
                     , ouroboros-consensus-cardano
                     , ouroboros-consensus-protocol
                     , ouroboros-consensus-shelley
                     , ouroboros-network

  
  ghc-options:         -Wall
                       -O2
                       -threaded
                       -rtsopts
                       "-with-rtsopts=-N -I0 -A16m"